--- a/web/static/app.scss
+++ b/web/static/app.scss
@@ -17,4 +17,17 @@ div.navbar {
     margin-bottom: 3em;
 
     img {
-        margin-top: $
+        margin-top: $navbar-height * 0.15;
+        height: 70%;
+    }
+}
+
+canvas.home-chart, canvas.tagAwardRate {
+    height: 20em;
+    width: 1000px;
+}
+
+#search-box {
+    height: 3em;
+    font-size: 1.5em;
+}
