--- a/web/views/base.pug
+++ b/web/views/base.pug
@@ -23,4 +23,20 @@ html
         div.row
           div.twelve.columns
             input#search-box.u-full-width(type="text" placeholder="Search...")
-     
+      if err
+        pre #{err.stack}
+      else
+        block container
+
+    script!="var popularTags = " + JSON.stringify(popularTags)
+    script(src="/static/granim.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js")
+    script(src="/static/app.js")
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-85631433-2', 'auto');
+      ga('send', 'pageview');
+
